--- a/src/ImageUtility/ImageUtility.Shell/MainWindow.xaml
+++ b/src/ImageUtility/ImageUtility.Shell/MainWindow.xaml
@@ -68,7 +68,7 @@
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="100" />
                                 <ColumnDefinition Width="100" />
-                                <ColumnDefinition Width="50" />
+                                <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
 
                             <TextBlock Grid.Row="0" Grid.Column="0" Text="Max Width:" />
