--- a/src/ImageUtility/ImageUtility.Shell/MainWindow.xaml
+++ b/src/ImageUtility/ImageUtility.Shell/MainWindow.xaml
@@ -41,7 +41,7 @@
             </Grid.ColumnDefinitions>
 
             <!-- Source Folder -->
-            <TextBlock Grid.Row="0" Grid.Column="0" Text="Source Folder"/>
+            <TextBlock Grid.Row="0" Grid.Column="0" Text="Source Folder:"/>
             <TextBox Grid.Row="0" Grid.Column="1" Margin="0,0,10,0" Text="{Binding SourceFolder}" IsReadOnly="True" IsReadOnlyCaretVisible="True"/>
             <Button Grid.Row="0" Grid.Column="2" Content="Browse" Command="{Binding SelectSourceFolderCommand}"/>
 
@@ -125,7 +125,11 @@
             </ListView>
 
             <!-- Bottom Action Bar -->
-            <Button Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3" Content="Convert" Command="{Binding ConvertCommand}"/>
+            <StackPanel Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3" Orientation="Horizontal" HorizontalAlignment="Right">
+                <TextBlock Text="Total File:" Margin="0,0,5,0" />
+                <TextBlock Text="{Binding SourceImagesFiles.Count}" Margin="0,0,10,0" FontWeight="Bold" />
+                <Button Width="150" Content="Convert" Command="{Binding ConvertCommand}" />
+            </StackPanel>
         </Grid>
     </Grid>
 </Window>
