Updated UI with new file info

--- a/src/ImageUtility/ImageUtility.Shell/MainWindow.xaml
+++ b/src/ImageUtility/ImageUtility.Shell/MainWindow.xaml
@@ -105,7 +105,7 @@
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
 
-                        <GridViewColumn Header="Width, Height" Width="100">
+                        <GridViewColumn Header="Old (W, H)" Width="100">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
                                     <TextBlock Text="{Binding Dimension}" TextTrimming="CharacterEllipsis" />
@@ -113,10 +113,26 @@
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
 
-                        <GridViewColumn Header="File Size" Width="100">
+                        <GridViewColumn Header="New (W, H)" Width="100">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding OutputFileDimension}" TextTrimming="CharacterEllipsis" />
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+
+                        <GridViewColumn Header="Old Size" Width="100">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
                                     <TextBlock Text="{Binding FileInfo.Length, Converter={StaticResource BytesToHumanReadableSizeConverter}}" TextTrimming="CharacterEllipsis" />
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+
+                        <GridViewColumn Header="New Size" Width="100">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding OutputFileInfo.Length, Converter={StaticResource BytesToHumanReadableSizeConverter}}" TextTrimming="CharacterEllipsis" />
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
